Issues (Header sticky; The header menu opens from the right; Has been added logo text; Has been added white & black (sticky navigation) logo; We added in customizer a condition. If you want, you can select type of logo to display: logo text or logo image; New version of screenshot has been added.) fixed.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,12 +1,25 @@
 Changelog
 =========
 
+v1.0.2 (https://github.com/9Pixels/minimalzerif/tree/v1.0.2) (2015-07-10)
+-------------------------------------------------------------------------
+
+Full changelog: https://github.com/9Pixels/minimalzerif/compare/v1.0.1...v1.0.2
+
+Bug(s):
+ - Header sticky.
+ - The header menu opens from the right.
+ - Has been added logo text.
+ - Has been added white & black (sticky navigation) logo.
+ - We added in customizer a condition. If you want, you can select type of logo to display: logo text or logo image.
+ - New version of screenshot has been added.
+
 v1.0.1 (https://github.com/9Pixels/minimalzerif/tree/v1.0.1) (2015-07-08)
 -------------------------------------------------------------------------
 
 Full changelog: https://github.com/9Pixels/minimalzerif/compare/v1.0.0...v1.0.1
 
-Fixed:
+Bug(s):
  - Has been added the screenshot.
 
 v1.0.0 (https://github.com/9Pixels/minimalzerif/tree/v1.0.0) (2015-07-08)
